# gs_hackathon

./: .gitignore  README.md  alerts.json  main.py  pyproject.toml  sample-output.json  zap_middleware.py
static/: index.html  main.css  main.js  raport.css  text.js
templates/: error.html  loading.html  raport.html
