[tool.poetry]
name = "gs-hackathon"
version = "0.1.0"
description = ""
authors = ["Rafał Opiłowski <rafalopilowski1@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
